--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h1>Basic Web Template</h1>
+    <section>
+        <img src="https://placehold.co/300x400" alt="my picture">
+        <div>
+            <h1>My Name</h1>
+            <p>A little about me.</p>
+        </div>
+    </section>
     <script type="module" src="script.js"></script>    
 </body>
 </html>
